assignment 3 code update

--- a/Exercises/Exercise-3/question-3/makefile
+++ b/Exercises/Exercise-3/question-3/makefile
@@ -1,13 +1,9 @@
 CC=gcc
 
-all: deadlock deadlock_fix 
-
-deadlock: deadlock.c 
-	$(CC) -pthread -o deadlock deadlock.c
+all:  deadlock_fix 
 
 deadlock_fix: deadlock_fix.c
 	$(CC)  -pthread -o deadlock_fix deadlock_fix.c
 
 clean:
-	rm -f deadlock
 	rm -f deadlock_fix
