--- a/Exercises/Exercise-3/question-4/makefile
+++ b/Exercises/Exercise-3/question-4/makefile
@@ -1,5 +1,10 @@
 
 
+all: posix_message_queue heap_message_queue
 
-message_queue: heap_message_queue.c
+posix_message_queue:posix_message_queue.c
+	gcc -pthread -o posix_message_queue posix_message_queue.c -lrt
+
+heap_message_queue: heap_message_queue.c
 	gcc -pthread -o heap_message_queue heap_message_queue.c -lrt
+	
