--- a/Exercises/Exercise-3/question-2/makefile
+++ b/Exercises/Exercise-3/question-2/makefile
@@ -3,4 +3,4 @@
 CC = gcc
 
 thread_safe_data_update: thread_safe_data_update.c
-	$(CC) -pthread -o thread_safe_data_update thread_safe_data_update.c 
+	$(CC) -pthread -o -g thread_safe_data_update thread_safe_data_update.c 
